// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ButtonGroup Horizontal No Space Removes the border radius around the buttons 1`] = `
.emotion-2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #3942B0;
  border: 0;
  border-color: #3942B0;
  border-radius: 8px;
  color: #FFFFFF;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  font-family: "Work Sans",Helvetica,sans-serif;
  font-size: 16px;
  font-weight: 500;
  height: 40px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 24px;
  margin: 0;
  min-width: 96px;
  overflow: hidden;
  padding: 12px 16px;
  position: relative;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: uppercase;
  touch-action: manipulation;
  -webkit-transition: background 0.35s,border-color 0.35s,box-shadow 0.35s,color 0.35s;
  transition: background 0.35s,border-color 0.35s,box-shadow 0.35s,color 0.35s;
  vertical-align: middle;
  white-space: nowrap;
  width: auto;
}

.emotion-2:not(:disabled):focus {
  outline: 2px solid #0074B7;
  outline-offset: 2px;
}

.emotion-2:not(:disabled):hover,
.emotion-2:not(:disabled):focus {
  background: #2d3489;
  color: #FFFFFF;
}

.emotion-2:not(:disabled):after {
  background: #FFFFFF;
  border-radius: 50%;
  content: '';
  height: 28px;
  left: 50%;
  opacity: 0;
  padding: 50%;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(-50%,-50%) scale(1);
  -ms-transform: translate(-50%,-50%) scale(1);
  transform: translate(-50%,-50%) scale(1);
  -webkit-transition: opacity 1s,-webkit-transform 0.5s;
  -webkit-transition: opacity 1s,transform 0.5s;
  transition: opacity 1s,transform 0.5s;
  width: 28px;
}

.emotion-2:not(:disabled):active {
  background: #202563;
  color: #FFFFFF;
}

.emotion-2:not(:disabled):active:after {
  opacity: 0.4;
  -webkit-transform: translate(-50%,-50%) scale(0);
  -ms-transform: translate(-50%,-50%) scale(0);
  transform: translate(-50%,-50%) scale(0);
  -webkit-transition: -webkit-transform 0s;
  -webkit-transition: transform 0s;
  transition: transform 0s;
}

.emotion-2 svg {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-0 {
  visibility: visible;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: start;
  -ms-flex-pack: start;
  justify-content: start;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.emotion-12 > button {
  margin: 0;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

.emotion-12 > button:first-of-type {
  margin-left: 0;
}

.emotion-12 > button:last-child {
  margin-right: 0;
}

.emotion-12 > button:first-of-type:not(:only-of-type) {
  border-radius: 8px 0 0 8px;
  border-right: 0;
}

.emotion-12 > button:nth-of-type(2) {
  border-left: 1px solid #FFFFFF;
}

.emotion-12 > button:not(:first-of-type) {
  border-radius: 0;
  border-right: 1px solid #FFFFFF;
}

.emotion-12 > button:not(:first-of-type).emotion-12 > button:not(:last-child) {
  border-right: 0;
}

.emotion-12 > button:last-child:not(:only-of-type) {
  border-radius: 0 8px 8px 0;
  border-right: 1px solid #FFFFFF;
}

.emotion-2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #3942B0;
  border: 0;
  border-color: #3942B0;
  border-radius: 8px;
  color: #FFFFFF;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  font-family: "Work Sans",Helvetica,sans-serif;
  font-size: 16px;
  font-weight: 500;
  height: 40px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 24px;
  margin: 0;
  min-width: 96px;
  overflow: hidden;
  padding: 12px 16px;
  position: relative;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: uppercase;
  touch-action: manipulation;
  -webkit-transition: background 0.35s,border-color 0.35s,box-shadow 0.35s,color 0.35s;
  transition: background 0.35s,border-color 0.35s,box-shadow 0.35s,color 0.35s;
  vertical-align: middle;
  white-space: nowrap;
  width: auto;
}

.emotion-2:not(:disabled):focus {
  outline: 2px solid #0074B7;
  outline-offset: 2px;
}

.emotion-2:not(:disabled):hover,
.emotion-2:not(:disabled):focus {
  background: #2d3489;
  color: #FFFFFF;
}

.emotion-2:not(:disabled):after {
  background: #FFFFFF;
  border-radius: 50%;
  content: '';
  height: 28px;
  left: 50%;
  opacity: 0;
  padding: 50%;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(-50%,-50%) scale(1);
  -ms-transform: translate(-50%,-50%) scale(1);
  transform: translate(-50%,-50%) scale(1);
  -webkit-transition: opacity 1s,-webkit-transform 0.5s;
  -webkit-transition: opacity 1s,transform 0.5s;
  transition: opacity 1s,transform 0.5s;
  width: 28px;
}

.emotion-2:not(:disabled):active {
  background: #202563;
  color: #FFFFFF;
}

.emotion-2:not(:disabled):active:after {
  opacity: 0.4;
  -webkit-transform: translate(-50%,-50%) scale(0);
  -ms-transform: translate(-50%,-50%) scale(0);
  transform: translate(-50%,-50%) scale(0);
  -webkit-transition: -webkit-transform 0s;
  -webkit-transition: transform 0s;
  transition: transform 0s;
}

.emotion-2 svg {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-0 {
  visibility: visible;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: start;
  -ms-flex-pack: start;
  justify-content: start;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.emotion-12 > button {
  margin: 0;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

.emotion-12 > button:first-of-type {
  margin-left: 0;
}

.emotion-12 > button:last-child {
  margin-right: 0;
}

.emotion-12 > button:first-of-type:not(:only-of-type) {
  border-radius: 8px 0 0 8px;
  border-right: 0;
}

.emotion-12 > button:nth-of-type(2) {
  border-left: 1px solid #FFFFFF;
}

.emotion-12 > button:not(:first-of-type) {
  border-radius: 0;
  border-right: 1px solid #FFFFFF;
}

.emotion-12 > button:not(:first-of-type).emotion-12 > button:not(:last-child) {
  border-right: 0;
}

.emotion-12 > button:last-child:not(:only-of-type) {
  border-radius: 0 8px 8px 0;
  border-right: 1px solid #FFFFFF;
}

<div>
  <div
    class="emotion-12"
    color="primary"
    data-testid="test-id"
    orientation="horizontal"
  >
    <button
      class="emotion-2 emotion-3"
      color="primary"
      data-testid="test-id-1"
      shape="fill"
      type="button"
    >
      <span
        class="emotion-0 emotion-1"
      >
        1
      </span>
    </button>
    <button
      class="emotion-2 emotion-3"
      color="primary"
      data-testid="test-id-2"
      shape="fill"
      type="button"
    >
      <span
        class="emotion-0 emotion-1"
      >
        2
      </span>
    </button>
    <button
      class="emotion-2 emotion-3"
      color="primary"
      data-testid="test-id-3"
      shape="fill"
      type="button"
    >
      <span
        class="emotion-0 emotion-1"
      >
        3
      </span>
    </button>
  </div>
</div>
`;

exports[`ButtonGroup Vertical No Space Does NOT remove the border radius around the buttons 1`] = `
.emotion-2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #3942B0;
  border: 0;
  border-color: #3942B0;
  border-radius: 8px;
  color: #FFFFFF;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  font-family: "Work Sans",Helvetica,sans-serif;
  font-size: 16px;
  font-weight: 500;
  height: 40px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 24px;
  margin: 0;
  min-width: 96px;
  overflow: hidden;
  padding: 12px 16px;
  position: relative;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: uppercase;
  touch-action: manipulation;
  -webkit-transition: background 0.35s,border-color 0.35s,box-shadow 0.35s,color 0.35s;
  transition: background 0.35s,border-color 0.35s,box-shadow 0.35s,color 0.35s;
  vertical-align: middle;
  white-space: nowrap;
  width: auto;
}

.emotion-2:not(:disabled):focus {
  outline: 2px solid #0074B7;
  outline-offset: 2px;
}

.emotion-2:not(:disabled):hover,
.emotion-2:not(:disabled):focus {
  background: #2d3489;
  color: #FFFFFF;
}

.emotion-2:not(:disabled):after {
  background: #FFFFFF;
  border-radius: 50%;
  content: '';
  height: 28px;
  left: 50%;
  opacity: 0;
  padding: 50%;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(-50%,-50%) scale(1);
  -ms-transform: translate(-50%,-50%) scale(1);
  transform: translate(-50%,-50%) scale(1);
  -webkit-transition: opacity 1s,-webkit-transform 0.5s;
  -webkit-transition: opacity 1s,transform 0.5s;
  transition: opacity 1s,transform 0.5s;
  width: 28px;
}

.emotion-2:not(:disabled):active {
  background: #202563;
  color: #FFFFFF;
}

.emotion-2:not(:disabled):active:after {
  opacity: 0.4;
  -webkit-transform: translate(-50%,-50%) scale(0);
  -ms-transform: translate(-50%,-50%) scale(0);
  transform: translate(-50%,-50%) scale(0);
  -webkit-transition: -webkit-transform 0s;
  -webkit-transition: transform 0s;
  transition: transform 0s;
}

.emotion-2 svg {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-0 {
  visibility: visible;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: start;
  -ms-flex-pack: start;
  justify-content: start;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.emotion-12 > button {
  margin: 0;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

.emotion-12 > button:first-of-type {
  margin-top: 0;
}

.emotion-12 > button:last-child {
  margin-bottom: 0;
}

.emotion-2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #3942B0;
  border: 0;
  border-color: #3942B0;
  border-radius: 8px;
  color: #FFFFFF;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  font-family: "Work Sans",Helvetica,sans-serif;
  font-size: 16px;
  font-weight: 500;
  height: 40px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 24px;
  margin: 0;
  min-width: 96px;
  overflow: hidden;
  padding: 12px 16px;
  position: relative;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: uppercase;
  touch-action: manipulation;
  -webkit-transition: background 0.35s,border-color 0.35s,box-shadow 0.35s,color 0.35s;
  transition: background 0.35s,border-color 0.35s,box-shadow 0.35s,color 0.35s;
  vertical-align: middle;
  white-space: nowrap;
  width: auto;
}

.emotion-2:not(:disabled):focus {
  outline: 2px solid #0074B7;
  outline-offset: 2px;
}

.emotion-2:not(:disabled):hover,
.emotion-2:not(:disabled):focus {
  background: #2d3489;
  color: #FFFFFF;
}

.emotion-2:not(:disabled):after {
  background: #FFFFFF;
  border-radius: 50%;
  content: '';
  height: 28px;
  left: 50%;
  opacity: 0;
  padding: 50%;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(-50%,-50%) scale(1);
  -ms-transform: translate(-50%,-50%) scale(1);
  transform: translate(-50%,-50%) scale(1);
  -webkit-transition: opacity 1s,-webkit-transform 0.5s;
  -webkit-transition: opacity 1s,transform 0.5s;
  transition: opacity 1s,transform 0.5s;
  width: 28px;
}

.emotion-2:not(:disabled):active {
  background: #202563;
  color: #FFFFFF;
}

.emotion-2:not(:disabled):active:after {
  opacity: 0.4;
  -webkit-transform: translate(-50%,-50%) scale(0);
  -ms-transform: translate(-50%,-50%) scale(0);
  transform: translate(-50%,-50%) scale(0);
  -webkit-transition: -webkit-transform 0s;
  -webkit-transition: transform 0s;
  transition: transform 0s;
}

.emotion-2 svg {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-0 {
  visibility: visible;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: start;
  -ms-flex-pack: start;
  justify-content: start;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.emotion-12 > button {
  margin: 0;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

.emotion-12 > button:first-of-type {
  margin-top: 0;
}

.emotion-12 > button:last-child {
  margin-bottom: 0;
}

<div>
  <div
    class="emotion-12"
    color="primary"
    data-testid="test-id"
    orientation="vertical"
  >
    <button
      class="emotion-2 emotion-3"
      color="primary"
      data-testid="test-id-4"
      shape="fill"
      type="button"
    >
      <span
        class="emotion-0 emotion-1"
      >
        1
      </span>
    </button>
    <button
      class="emotion-2 emotion-3"
      color="primary"
      data-testid="test-id-5"
      shape="fill"
      type="button"
    >
      <span
        class="emotion-0 emotion-1"
      >
        2
      </span>
    </button>
    <button
      class="emotion-2 emotion-3"
      color="primary"
      data-testid="test-id-6"
      shape="fill"
      type="button"
    >
      <span
        class="emotion-0 emotion-1"
      >
        3
      </span>
    </button>
  </div>
</div>
`;
